Fixed text on button so it doesn't go out of bounds on small screens. Brian said he would knock points off for that otherwise.

--- a/stylesheets/partials/modules/_main-input.scss
+++ b/stylesheets/partials/modules/_main-input.scss
@@ -16,7 +16,7 @@
 
     input {
       font-size: 3vh;
-      color: $blue;
+      color: $dark-grey;
       text-align: center;
       width: 150px;
       height: 5vh;
@@ -34,7 +34,7 @@
 
     button {
       color: white;
-      font-size: 3vh;
+      font-size: 2.5vh;
       background-color: $blue;
       margin: 0 auto;
       margin-top: $gutter;
